// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SButton > should render children 1`] = `
<button
  class=":uno:
font-medium inline-flex items-center justify-center gap-2 focus-visible:outline-3 focus-visible:outline-solid
select-none outline-offset--3 cursor-pointer overflow-hidden min-w-max text-shadow-lg text-shadow-color-[var(--var-semi-focus-bg)]
c-[var(--var-text-color)] b-[var(--var-color)] focus-visible:outline-[var(--var-focus-bg)] disabled:c-[var(--var-muted-color)] before:to-[var(--var-semi-focus-bg)]
 :uno:
before:h-full before:opacity-70   data-[loading-animation=true]:before:animate-slide
data-[loading=true]:before:content-[""] before:absolute before:left-0 before:top-0 before:right-0 before:bottom-0
before:inset-0 before:bg-gradient-to-r before:from-transparent before:w-[var(--var-progress-percent)]
before:pointer-events-none before:transition-width before:duration-300
 :uno: color-var-text-color=black var-color=gray-100 var-focus-bg=black var-muted-color=gray-400 var-semi-muted-color=gray-300 var-semi-focus-bg=white :uno: shadow-sm bg-[radial-gradient(at_90%_30%,_var(--var-color)_50%,_var(--var-muted-color)_130%)] :var-padding-offset=1px data-[loading=true]:animate-pulse-alt :uno:
py-[calc(_.25rem+_var(--var-padding-offset,_0px))] px-[calc(_var(--var-padding,_0px)+_var(--var-padding-offset,_0px))] rd-md text-base
 var-padding=.75rem relative"
  data-loading="false"
  data-loading-animation="false"
  style=""
>
  Test Button
</button>
`;

exports[`SButton > should render color variant: 'default' 1`] = `
<button
  class=":uno:
font-medium inline-flex items-center justify-center gap-2 focus-visible:outline-3 focus-visible:outline-solid
select-none outline-offset--3 cursor-pointer overflow-hidden min-w-max text-shadow-lg text-shadow-color-[var(--var-semi-focus-bg)]
c-[var(--var-text-color)] b-[var(--var-color)] focus-visible:outline-[var(--var-focus-bg)] disabled:c-[var(--var-muted-color)] before:to-[var(--var-semi-focus-bg)]
 :uno:
before:h-full before:opacity-70   data-[loading-animation=true]:before:animate-slide
data-[loading=true]:before:content-[""] before:absolute before:left-0 before:top-0 before:right-0 before:bottom-0
before:inset-0 before:bg-gradient-to-r before:from-transparent before:w-[var(--var-progress-percent)]
before:pointer-events-none before:transition-width before:duration-300
 :uno: color-var-text-color=black var-color=gray-100 var-focus-bg=black var-muted-color=gray-400 var-semi-muted-color=gray-300 var-semi-focus-bg=white :uno: shadow-sm bg-[radial-gradient(at_90%_30%,_var(--var-color)_50%,_var(--var-muted-color)_130%)] :var-padding-offset=1px data-[loading=true]:animate-pulse-alt :uno:
py-[calc(_.25rem+_var(--var-padding-offset,_0px))] px-[calc(_var(--var-padding,_0px)+_var(--var-padding-offset,_0px))] rd-md text-base
 var-padding=.75rem relative"
  data-loading="false"
  data-loading-animation="false"
  style=""
>
  Color Button
</button>
`;

exports[`SButton > should render color variant: 'error' 1`] = `
<button
  class=":uno:
font-medium inline-flex items-center justify-center gap-2 focus-visible:outline-3 focus-visible:outline-solid
select-none outline-offset--3 cursor-pointer overflow-hidden min-w-max text-shadow-lg text-shadow-color-[var(--var-semi-focus-bg)]
c-[var(--var-text-color)] b-[var(--var-color)] focus-visible:outline-[var(--var-focus-bg)] disabled:c-[var(--var-muted-color)] before:to-[var(--var-semi-focus-bg)]
 :uno:
before:h-full before:opacity-70   data-[loading-animation=true]:before:animate-slide
data-[loading=true]:before:content-[""] before:absolute before:left-0 before:top-0 before:right-0 before:bottom-0
before:inset-0 before:bg-gradient-to-r before:from-transparent before:w-[var(--var-progress-percent)]
before:pointer-events-none before:transition-width before:duration-300
 :uno: color-var-text-color=white  var-color=red-400 var-focus-bg=red-700 var-muted-color=red-200 var-semi-muted-color=red-300 var-semi-focus-bg=red-500 :uno: shadow-sm bg-[radial-gradient(at_90%_30%,_var(--var-color)_50%,_var(--var-muted-color)_130%)] :var-padding-offset=1px data-[loading=true]:animate-pulse-alt :uno:
py-[calc(_.25rem+_var(--var-padding-offset,_0px))] px-[calc(_var(--var-padding,_0px)+_var(--var-padding-offset,_0px))] rd-md text-base
 var-padding=.75rem relative"
  data-loading="false"
  data-loading-animation="false"
  style=""
>
  Color Button
</button>
`;

exports[`SButton > should render color variant: 'info' 1`] = `
<button
  class=":uno:
font-medium inline-flex items-center justify-center gap-2 focus-visible:outline-3 focus-visible:outline-solid
select-none outline-offset--3 cursor-pointer overflow-hidden min-w-max text-shadow-lg text-shadow-color-[var(--var-semi-focus-bg)]
c-[var(--var-text-color)] b-[var(--var-color)] focus-visible:outline-[var(--var-focus-bg)] disabled:c-[var(--var-muted-color)] before:to-[var(--var-semi-focus-bg)]
 :uno:
before:h-full before:opacity-70   data-[loading-animation=true]:before:animate-slide
data-[loading=true]:before:content-[""] before:absolute before:left-0 before:top-0 before:right-0 before:bottom-0
before:inset-0 before:bg-gradient-to-r before:from-transparent before:w-[var(--var-progress-percent)]
before:pointer-events-none before:transition-width before:duration-300
 :uno: color-var-text-color=white var-color=sky-400 var-focus-bg=sky-700 var-muted-color=sky-200 var-semi-muted-color=sky-300 var-semi-focus-bg=sky-500 :uno: shadow-sm bg-[radial-gradient(at_90%_30%,_var(--var-color)_50%,_var(--var-muted-color)_130%)] :var-padding-offset=1px data-[loading=true]:animate-pulse-alt :uno:
py-[calc(_.25rem+_var(--var-padding-offset,_0px))] px-[calc(_var(--var-padding,_0px)+_var(--var-padding-offset,_0px))] rd-md text-base
 var-padding=.75rem relative"
  data-loading="false"
  data-loading-animation="false"
  style=""
>
  Color Button
</button>
`;

exports[`SButton > should render color variant: 'primary' 1`] = `
<button
  class=":uno:
font-medium inline-flex items-center justify-center gap-2 focus-visible:outline-3 focus-visible:outline-solid
select-none outline-offset--3 cursor-pointer overflow-hidden min-w-max text-shadow-lg text-shadow-color-[var(--var-semi-focus-bg)]
c-[var(--var-text-color)] b-[var(--var-color)] focus-visible:outline-[var(--var-focus-bg)] disabled:c-[var(--var-muted-color)] before:to-[var(--var-semi-focus-bg)]
 :uno:
before:h-full before:opacity-70   data-[loading-animation=true]:before:animate-slide
data-[loading=true]:before:content-[""] before:absolute before:left-0 before:top-0 before:right-0 before:bottom-0
before:inset-0 before:bg-gradient-to-r before:from-transparent before:w-[var(--var-progress-percent)]
before:pointer-events-none before:transition-width before:duration-300
 :uno: color-var-text-color=white var-color=blue-400 var-focus-bg=blue-700 var-muted-color=blue-200 var-semi-muted-color=white var-semi-focus-bg=blue-500 :uno: shadow-sm bg-[radial-gradient(at_90%_30%,_var(--var-color)_50%,_var(--var-muted-color)_130%)] :var-padding-offset=1px data-[loading=true]:animate-pulse-alt :uno:
py-[calc(_.25rem+_var(--var-padding-offset,_0px))] px-[calc(_var(--var-padding,_0px)+_var(--var-padding-offset,_0px))] rd-md text-base
 var-padding=.75rem relative"
  data-loading="false"
  data-loading-animation="false"
  style=""
>
  Color Button
</button>
`;

exports[`SButton > should render color variant: 'secondary' 1`] = `
<button
  class=":uno:
font-medium inline-flex items-center justify-center gap-2 focus-visible:outline-3 focus-visible:outline-solid
select-none outline-offset--3 cursor-pointer overflow-hidden min-w-max text-shadow-lg text-shadow-color-[var(--var-semi-focus-bg)]
c-[var(--var-text-color)] b-[var(--var-color)] focus-visible:outline-[var(--var-focus-bg)] disabled:c-[var(--var-muted-color)] before:to-[var(--var-semi-focus-bg)]
 :uno:
before:h-full before:opacity-70   data-[loading-animation=true]:before:animate-slide
data-[loading=true]:before:content-[""] before:absolute before:left-0 before:top-0 before:right-0 before:bottom-0
before:inset-0 before:bg-gradient-to-r before:from-transparent before:w-[var(--var-progress-percent)]
before:pointer-events-none before:transition-width before:duration-300
 :uno: color-var-text-color=white var-color=indigo-400 var-focus-bg=indigo-700 var-muted-color=indigo-200 var-semi-muted-color=white var-semi-focus-bg=indigo-500 :uno: shadow-sm bg-[radial-gradient(at_90%_30%,_var(--var-color)_50%,_var(--var-muted-color)_130%)] :var-padding-offset=1px data-[loading=true]:animate-pulse-alt :uno:
py-[calc(_.25rem+_var(--var-padding-offset,_0px))] px-[calc(_var(--var-padding,_0px)+_var(--var-padding-offset,_0px))] rd-md text-base
 var-padding=.75rem relative"
  data-loading="false"
  data-loading-animation="false"
  style=""
>
  Color Button
</button>
`;

exports[`SButton > should render color variant: 'success' 1`] = `
<button
  class=":uno:
font-medium inline-flex items-center justify-center gap-2 focus-visible:outline-3 focus-visible:outline-solid
select-none outline-offset--3 cursor-pointer overflow-hidden min-w-max text-shadow-lg text-shadow-color-[var(--var-semi-focus-bg)]
c-[var(--var-text-color)] b-[var(--var-color)] focus-visible:outline-[var(--var-focus-bg)] disabled:c-[var(--var-muted-color)] before:to-[var(--var-semi-focus-bg)]
 :uno:
before:h-full before:opacity-70   data-[loading-animation=true]:before:animate-slide
data-[loading=true]:before:content-[""] before:absolute before:left-0 before:top-0 before:right-0 before:bottom-0
before:inset-0 before:bg-gradient-to-r before:from-transparent before:w-[var(--var-progress-percent)]
before:pointer-events-none before:transition-width before:duration-300
 :uno: color-var-text-color=white var-color=green-400 var-focus-bg=green-700 var-muted-color=green-200 var-semi-muted-color=green-300 var-semi-focus-bg=green-500 :uno: shadow-sm bg-[radial-gradient(at_90%_30%,_var(--var-color)_50%,_var(--var-muted-color)_130%)] :var-padding-offset=1px data-[loading=true]:animate-pulse-alt :uno:
py-[calc(_.25rem+_var(--var-padding-offset,_0px))] px-[calc(_var(--var-padding,_0px)+_var(--var-padding-offset,_0px))] rd-md text-base
 var-padding=.75rem relative"
  data-loading="false"
  data-loading-animation="false"
  style=""
>
  Color Button
</button>
`;

exports[`SButton > should render color variant: 'transparent' 1`] = `
<button
  class=":uno:
font-medium inline-flex items-center justify-center gap-2 focus-visible:outline-3 focus-visible:outline-solid
select-none outline-offset--3 cursor-pointer overflow-hidden min-w-max text-shadow-lg text-shadow-color-[var(--var-semi-focus-bg)]
c-[var(--var-text-color)] b-[var(--var-color)] focus-visible:outline-[var(--var-focus-bg)] disabled:c-[var(--var-muted-color)] before:to-[var(--var-semi-focus-bg)]
 :uno:
before:h-full before:opacity-70   data-[loading-animation=true]:before:animate-slide
data-[loading=true]:before:content-[""] before:absolute before:left-0 before:top-0 before:right-0 before:bottom-0
before:inset-0 before:bg-gradient-to-r before:from-transparent before:w-[var(--var-progress-percent)]
before:pointer-events-none before:transition-width before:duration-300
 :uno: color-var-text-color=black var-color=transparent var-focus-bg=black var-muted-color=gray-400 var-semi-muted-color=gray-300 var-semi-focus-bg=gray-200 :uno: shadow-sm bg-[radial-gradient(at_90%_30%,_var(--var-color)_50%,_var(--var-muted-color)_130%)] :var-padding-offset=1px data-[loading=true]:animate-pulse-alt :uno:
py-[calc(_.25rem+_var(--var-padding-offset,_0px))] px-[calc(_var(--var-padding,_0px)+_var(--var-padding-offset,_0px))] rd-md text-base
 var-padding=.75rem relative"
  data-loading="false"
  data-loading-animation="false"
  style=""
>
  Color Button
</button>
`;

exports[`SButton > should render color variant: 'warning' 1`] = `
<button
  class=":uno:
font-medium inline-flex items-center justify-center gap-2 focus-visible:outline-3 focus-visible:outline-solid
select-none outline-offset--3 cursor-pointer overflow-hidden min-w-max text-shadow-lg text-shadow-color-[var(--var-semi-focus-bg)]
c-[var(--var-text-color)] b-[var(--var-color)] focus-visible:outline-[var(--var-focus-bg)] disabled:c-[var(--var-muted-color)] before:to-[var(--var-semi-focus-bg)]
 :uno:
before:h-full before:opacity-70   data-[loading-animation=true]:before:animate-slide
data-[loading=true]:before:content-[""] before:absolute before:left-0 before:top-0 before:right-0 before:bottom-0
before:inset-0 before:bg-gradient-to-r before:from-transparent before:w-[var(--var-progress-percent)]
before:pointer-events-none before:transition-width before:duration-300
 :uno: color-var-text-color=white var-color=orange-400 var-focus-bg=orange-700 var-muted-color=orange-200 var-semi-muted-color=orange-300 var-semi-focus-bg=orange-500 :uno: shadow-sm bg-[radial-gradient(at_90%_30%,_var(--var-color)_50%,_var(--var-muted-color)_130%)] :var-padding-offset=1px data-[loading=true]:animate-pulse-alt :uno:
py-[calc(_.25rem+_var(--var-padding-offset,_0px))] px-[calc(_var(--var-padding,_0px)+_var(--var-padding-offset,_0px))] rd-md text-base
 var-padding=.75rem relative"
  data-loading="false"
  data-loading-animation="false"
  style=""
>
  Color Button
</button>
`;

exports[`SButton > should render color variant: 'warning' 2`] = `
<button
  class=":uno:
font-medium inline-flex items-center justify-center gap-2 focus-visible:outline-3 focus-visible:outline-solid
select-none outline-offset--3 cursor-pointer overflow-hidden min-w-max text-shadow-lg text-shadow-color-[var(--var-semi-focus-bg)]
c-[var(--var-text-color)] b-[var(--var-color)] focus-visible:outline-[var(--var-focus-bg)] disabled:c-[var(--var-muted-color)] before:to-[var(--var-semi-focus-bg)]
 :uno:
before:h-full before:opacity-70   data-[loading-animation=true]:before:animate-slide
data-[loading=true]:before:content-[""] before:absolute before:left-0 before:top-0 before:right-0 before:bottom-0
before:inset-0 before:bg-gradient-to-r before:from-transparent before:w-[var(--var-progress-percent)]
before:pointer-events-none before:transition-width before:duration-300
 :uno: color-var-text-color=white var-color=orange-400 var-focus-bg=orange-700 var-muted-color=orange-200 var-semi-muted-color=orange-300 var-semi-focus-bg=orange-500 :uno: shadow-sm bg-[radial-gradient(at_90%_30%,_var(--var-color)_50%,_var(--var-muted-color)_130%)] :var-padding-offset=1px data-[loading=true]:animate-pulse-alt :uno:
py-[calc(_.25rem+_var(--var-padding-offset,_0px))] px-[calc(_var(--var-padding,_0px)+_var(--var-padding-offset,_0px))] rd-md text-base
 var-padding=.75rem relative"
  data-loading="false"
  data-loading-animation="false"
  style=""
>
  Color Button
</button>
`;

exports[`SButton > should render flat, glass, outline, fit 1`] = `
<button
  class=":uno:
font-medium inline-flex items-center justify-center gap-2 focus-visible:outline-3 focus-visible:outline-solid
select-none outline-offset--3 cursor-pointer overflow-hidden min-w-max text-shadow-lg text-shadow-color-[var(--var-semi-focus-bg)]
c-[var(--var-text-color)] b-[var(--var-color)] focus-visible:outline-[var(--var-focus-bg)] disabled:c-[var(--var-muted-color)] before:to-[var(--var-semi-focus-bg)]
 :uno:
before:h-full before:opacity-70   data-[loading-animation=true]:before:animate-slide
data-[loading=true]:before:content-[""] before:absolute before:left-0 before:top-0 before:right-0 before:bottom-0
before:inset-0 before:bg-gradient-to-r before:from-transparent before:w-[var(--var-progress-percent)]
before:pointer-events-none before:transition-width before:duration-300
 :uno: color-var-text-color=black var-color=gray-100 var-focus-bg=black var-muted-color=gray-400 var-semi-muted-color=gray-300 var-semi-focus-bg=white :uno: bg-[var(--var-color)] hover:enabled:b-[--var-color] :uno:
backdrop-blur-sm bg-opacity-90 b-opacity-80 focus:outline-opacity-50
 :uno: b-1 b-solid data-[loading=true]:animate-pulse-alt :uno:
py-[calc(_.25rem+_var(--var-padding-offset,_0px))] px-[calc(_var(--var-padding,_0px)+_var(--var-padding-offset,_0px))] rd-md text-base
 var-padding=.25rem relative"
  data-loading="false"
  data-loading-animation="false"
  style=""
>
  Styled Button
</button>
`;

exports[`SButton > should render loading (boolean) 1`] = `
<button
  class=":uno:
font-medium inline-flex items-center justify-center gap-2 focus-visible:outline-3 focus-visible:outline-solid
select-none outline-offset--3 cursor-pointer overflow-hidden min-w-max text-shadow-lg text-shadow-color-[var(--var-semi-focus-bg)]
c-[var(--var-text-color)] b-[var(--var-color)] focus-visible:outline-[var(--var-focus-bg)] disabled:c-[var(--var-muted-color)] before:to-[var(--var-semi-focus-bg)]
 :uno:
before:h-full before:opacity-70   data-[loading-animation=true]:before:animate-slide
data-[loading=true]:before:content-[""] before:absolute before:left-0 before:top-0 before:right-0 before:bottom-0
before:inset-0 before:bg-gradient-to-r before:from-transparent before:w-[var(--var-progress-percent)]
before:pointer-events-none before:transition-width before:duration-300
 :uno: color-var-text-color=black var-color=gray-100 var-focus-bg=black var-muted-color=gray-400 var-semi-muted-color=gray-300 var-semi-focus-bg=white :uno: shadow-sm bg-[radial-gradient(at_90%_30%,_var(--var-color)_50%,_var(--var-muted-color)_130%)] :var-padding-offset=1px data-[loading=true]:animate-pulse-alt :uno:
py-[calc(_.25rem+_var(--var-padding-offset,_0px))] px-[calc(_var(--var-padding,_0px)+_var(--var-padding-offset,_0px))] rd-md text-base
 var-padding=.75rem relative"
  data-loading="true"
  data-loading-animation="true"
  disabled=""
  style=""
>
  Loading Button
</button>
`;

exports[`SButton > should render loading (number > 0) 1`] = `
<button
  class=":uno:
font-medium inline-flex items-center justify-center gap-2 focus-visible:outline-3 focus-visible:outline-solid
select-none outline-offset--3 cursor-pointer overflow-hidden min-w-max text-shadow-lg text-shadow-color-[var(--var-semi-focus-bg)]
c-[var(--var-text-color)] b-[var(--var-color)] focus-visible:outline-[var(--var-focus-bg)] disabled:c-[var(--var-muted-color)] before:to-[var(--var-semi-focus-bg)]
 :uno:
before:h-full before:opacity-70   data-[loading-animation=true]:before:animate-slide
data-[loading=true]:before:content-[""] before:absolute before:left-0 before:top-0 before:right-0 before:bottom-0
before:inset-0 before:bg-gradient-to-r before:from-transparent before:w-[var(--var-progress-percent)]
before:pointer-events-none before:transition-width before:duration-300
 :uno: color-var-text-color=black var-color=gray-100 var-focus-bg=black var-muted-color=gray-400 var-semi-muted-color=gray-300 var-semi-focus-bg=white :uno: shadow-sm bg-[radial-gradient(at_90%_30%,_var(--var-color)_50%,_var(--var-muted-color)_130%)] :var-padding-offset=1px data-[loading=true]:animate-pulse-alt :uno:
py-[calc(_.25rem+_var(--var-padding-offset,_0px))] px-[calc(_var(--var-padding,_0px)+_var(--var-padding-offset,_0px))] rd-md text-base
 var-padding=.75rem relative"
  data-loading="true"
  data-loading-animation="false"
  disabled=""
  style="--var-progress-percent: 50%;"
>
  Loading 50%
</button>
`;

exports[`SButton > should render size variant: 'lg' 1`] = `
<button
  class=":uno:
font-medium inline-flex items-center justify-center gap-2 focus-visible:outline-3 focus-visible:outline-solid
select-none outline-offset--3 cursor-pointer overflow-hidden min-w-max text-shadow-lg text-shadow-color-[var(--var-semi-focus-bg)]
c-[var(--var-text-color)] b-[var(--var-color)] focus-visible:outline-[var(--var-focus-bg)] disabled:c-[var(--var-muted-color)] before:to-[var(--var-semi-focus-bg)]
 :uno:
before:h-full before:opacity-70   data-[loading-animation=true]:before:animate-slide
data-[loading=true]:before:content-[""] before:absolute before:left-0 before:top-0 before:right-0 before:bottom-0
before:inset-0 before:bg-gradient-to-r before:from-transparent before:w-[var(--var-progress-percent)]
before:pointer-events-none before:transition-width before:duration-300
 :uno: color-var-text-color=black var-color=gray-100 var-focus-bg=black var-muted-color=gray-400 var-semi-muted-color=gray-300 var-semi-focus-bg=white :uno: shadow-sm bg-[radial-gradient(at_90%_30%,_var(--var-color)_50%,_var(--var-muted-color)_130%)] :var-padding-offset=1px data-[loading=true]:animate-pulse-alt :uno:
py-[calc(_0.75rem+_var(--var-padding-offset,_0px))] px-[calc(_var(--var-padding,_0px)+_var(--var-padding-offset,_0px))] rd-lg text-lg
 var-padding=1.25rem relative"
  data-loading="false"
  data-loading-animation="false"
  style=""
>
  Size Button
</button>
`;

exports[`SButton > should render size variant: 'md' 1`] = `
<button
  class=":uno:
font-medium inline-flex items-center justify-center gap-2 focus-visible:outline-3 focus-visible:outline-solid
select-none outline-offset--3 cursor-pointer overflow-hidden min-w-max text-shadow-lg text-shadow-color-[var(--var-semi-focus-bg)]
c-[var(--var-text-color)] b-[var(--var-color)] focus-visible:outline-[var(--var-focus-bg)] disabled:c-[var(--var-muted-color)] before:to-[var(--var-semi-focus-bg)]
 :uno:
before:h-full before:opacity-70   data-[loading-animation=true]:before:animate-slide
data-[loading=true]:before:content-[""] before:absolute before:left-0 before:top-0 before:right-0 before:bottom-0
before:inset-0 before:bg-gradient-to-r before:from-transparent before:w-[var(--var-progress-percent)]
before:pointer-events-none before:transition-width before:duration-300
 :uno: color-var-text-color=black var-color=gray-100 var-focus-bg=black var-muted-color=gray-400 var-semi-muted-color=gray-300 var-semi-focus-bg=white :uno: shadow-sm bg-[radial-gradient(at_90%_30%,_var(--var-color)_50%,_var(--var-muted-color)_130%)] :var-padding-offset=1px data-[loading=true]:animate-pulse-alt :uno:
py-[calc(_.25rem+_var(--var-padding-offset,_0px))] px-[calc(_var(--var-padding,_0px)+_var(--var-padding-offset,_0px))] rd-md text-base
 var-padding=.75rem relative"
  data-loading="false"
  data-loading-animation="false"
  style=""
>
  Size Button
</button>
`;

exports[`SButton > should render size variant: 'sm' 1`] = `
<button
  class=":uno:
font-medium inline-flex items-center justify-center gap-2 focus-visible:outline-3 focus-visible:outline-solid
select-none outline-offset--3 cursor-pointer overflow-hidden min-w-max text-shadow-lg text-shadow-color-[var(--var-semi-focus-bg)]
c-[var(--var-text-color)] b-[var(--var-color)] focus-visible:outline-[var(--var-focus-bg)] disabled:c-[var(--var-muted-color)] before:to-[var(--var-semi-focus-bg)]
 :uno:
before:h-full before:opacity-70   data-[loading-animation=true]:before:animate-slide
data-[loading=true]:before:content-[""] before:absolute before:left-0 before:top-0 before:right-0 before:bottom-0
before:inset-0 before:bg-gradient-to-r before:from-transparent before:w-[var(--var-progress-percent)]
before:pointer-events-none before:transition-width before:duration-300
 :uno: color-var-text-color=black var-color=gray-100 var-focus-bg=black var-muted-color=gray-400 var-semi-muted-color=gray-300 var-semi-focus-bg=white :uno: shadow-sm bg-[radial-gradient(at_90%_30%,_var(--var-color)_50%,_var(--var-muted-color)_130%)] :var-padding-offset=1px data-[loading=true]:animate-pulse-alt :uno:
py-[calc(_.1rem+_var(--var-padding-offset,_0px))] px-[calc(_var(--var-padding,_0px)+_var(--var-padding-offset,_0px))] rd-sm text-sm
 var-padding=.25rem relative"
  data-loading="false"
  data-loading-animation="false"
  style=""
>
  Size Button
</button>
`;
